// 大厅RPC
syntax = "proto3";
package rpc;
import "base.proto";

// GameLobbyRPC RPC 10000 ~ 12000
enum LobbyBaseRPC {
    // 进入游戏前的RPC  ////////////////////////////
    LOBBY_BASE_RPC_NONE = 0;

    REQ_BASIC_PLAYER_DATA = 10000; // 进入服务器之前获取基本游戏信息
    ACK_BASIC_PLAYER_DATA = 10001;

    REQ_NEW_PLAYER = 10002; // 创建新玩家
    ACK_NEW_PLAYER = 10003;

    REQ_ENTER = 10100; // 进入游戏大厅
    ACK_ENTER = 10101; //

    REQ_RECONNECT = 10102;
    ACK_RECONNECT = 10103;

    // 进入游戏后的 RPC ////////////////////////////
    REQ_LEAVE = 10110; // 退出
    ACK_LEAVE = 10111; //
}

message ReqEnter {
    Ident object = 1;  // 游戏对象guid
    Ident guid = 2;    // 账号guid
    bytes account = 3; // 登录账号
}

message AckEnter {
    int32 code = 1;
    Ident guid = 2;
    Ident object = 3; // 相当于是一个Player
}

message ReqLeave {}
message AckLeave {}

message ReqReconnect {}
message AckReconnect {}

// proxy或客户端告知game服务器的
message AckPlayerOffline {
    Ident self = 1;
    Ident object = 2;
    int32 game = 3;
    int32 proxy = 4;
}